<resources>

    <string name="app_name">ASIC</string>
    <string name="app_full_name">Academia Sinica Information Center (ASIC)</string>
    <string name="version_number">1.02</string>
    <string name="title_section6">風向</string>
    <string name="title_section5">風速</string>
    <string name="title_section4">光度</string>
    <string name="title_section3">雨量</string>
    <string name="title_section2">濕度</string>
    <string name="title_section1">溫度</string>
    <string name="current_weather">目前氣象</string>
    <string name="total_rainfall">雨量</string>
    <string name="update_time">更新時間</string>
    <string name="menu_settings">設定</string>
    <string name="menu_about">關於</string>
    <string name="menu_refresh">更新</string>
    <string name="title_activity_main">Academia Sinica </string>
    <string name="weather_status">Weather Status</string>
    <string name="refresh_periodi_short">請於五分鐘後再更新一次</string>
    <string name="wait_refresh">請等待，會自動更新</string>
    <string name="disconnect">沒有任何網路連線，請待有網路連線的時候再開啓一次程式</string>
    <string name="loading">loading\.\.\.</string>
    
    
    <!-- About.java -->
    <string name="contact_mail">ntuaha@gmail.com</string>
    <string name="developer">本APP由NRL開發</string>
    <string name="copyright_claim">aha</string>

</resources>